TypeCheckerParser.py
# Generated from TypeChecker.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TypeCheckerParser ( Parser ):

    grammarFileName = "TypeChecker.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'show'", "'!'", "'return'", "'new'", 
                     "':='", "'('", "','", "')'", "'method'", "'{'", "'}'", 
                     "'class'", "'inherit'", "'template'", "'.'", "'+'", 
                     "'-'", "'*'", "'/'", "'chunk'", "'fraction'", "'string'", 
                     "'none'", "'$'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Whitespace", "ChunkLiteral", 
                      "FractionLiteral", "StringLiteral", "Letter", "NonZeroDigit", 
                      "Digit", "CharacterExceptQuote", "Character", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_showStatement = 2
    RULE_returnStatement = 3
    RULE_createClassStatement = 4
    RULE_variableSignature = 5
    RULE_variableDeclaration = 6
    RULE_assignment = 7
    RULE_parametersInit = 8
    RULE_methodSignature = 9
    RULE_methodDeclaration = 10
    RULE_methodBlock = 11
    RULE_classDeclaration = 12
    RULE_templateDeclaration = 13
    RULE_parametersCall = 14
    RULE_classVariableAccess = 15
    RULE_classMethodAccess = 16
    RULE_expression = 17
    RULE_additiveExpression = 18
    RULE_multiplicativeExpression = 19
    RULE_term = 20
    RULE_type = 21
    RULE_variableName = 22
    RULE_className = 23
    RULE_methodName = 24
    RULE_identifier = 25
    RULE_literal = 26

    ruleNames =  [ "program", "statement", "showStatement", "returnStatement", 
                   "createClassStatement", "variableSignature", "variableDeclaration", 
                   "assignment", "parametersInit", "methodSignature", "methodDeclaration", 
                   "methodBlock", "classDeclaration", "templateDeclaration", 
                   "parametersCall", "classVariableAccess", "classMethodAccess", 
                   "expression", "additiveExpression", "multiplicativeExpression", 
                   "term", "type", "variableName", "className", "methodName", 
                   "identifier", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    Whitespace=26
    ChunkLiteral=27
    FractionLiteral=28
    StringLiteral=29
    Letter=30
    NonZeroDigit=31
    Digit=32
    CharacterExceptQuote=33
    Character=34
    BlockComment=35
    LineComment=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.StatementContext,i)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TypeCheckerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1106268162) != 0):
                self.state = 54
                self.statement()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(TypeCheckerParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(TypeCheckerParser.AssignmentContext,0)


        def showStatement(self):
            return self.getTypedRuleContext(TypeCheckerParser.ShowStatementContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(TypeCheckerParser.ClassDeclarationContext,0)


        def templateDeclaration(self):
            return self.getTypedRuleContext(TypeCheckerParser.TemplateDeclarationContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TypeCheckerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 23, 30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.variableDeclaration()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.assignment()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.showStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.classDeclaration()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.templateDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TypeCheckerParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_showStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowStatement" ):
                listener.enterShowStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowStatement" ):
                listener.exitShowStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowStatement" ):
                return visitor.visitShowStatement(self)
            else:
                return visitor.visitChildren(self)




    def showStatement(self):

        localctx = TypeCheckerParser.ShowStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_showStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(TypeCheckerParser.T__0)
            self.state = 68
            self.expression()
            self.state = 69
            self.match(TypeCheckerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TypeCheckerParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = TypeCheckerParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(TypeCheckerParser.T__2)
            self.state = 72
            self.expression()
            self.state = 73
            self.match(TypeCheckerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateClassStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(TypeCheckerParser.ClassNameContext,0)


        def parametersCall(self):
            return self.getTypedRuleContext(TypeCheckerParser.ParametersCallContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_createClassStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateClassStatement" ):
                listener.enterCreateClassStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateClassStatement" ):
                listener.exitCreateClassStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateClassStatement" ):
                return visitor.visitCreateClassStatement(self)
            else:
                return visitor.visitChildren(self)




    def createClassStatement(self):

        localctx = TypeCheckerParser.CreateClassStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_createClassStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(TypeCheckerParser.T__3)
            self.state = 76
            self.className()
            self.state = 77
            self.parametersCall()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableSignatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TypeCheckerParser.TypeContext,0)


        def variableName(self):
            return self.getTypedRuleContext(TypeCheckerParser.VariableNameContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_variableSignature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableSignature" ):
                listener.enterVariableSignature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableSignature" ):
                listener.exitVariableSignature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableSignature" ):
                return visitor.visitVariableSignature(self)
            else:
                return visitor.visitChildren(self)




    def variableSignature(self):

        localctx = TypeCheckerParser.VariableSignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableSignature)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.type_()
            self.state = 80
            self.variableName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableSignature(self):
            return self.getTypedRuleContext(TypeCheckerParser.VariableSignatureContext,0)


        def expression(self):
            return self.getTypedRuleContext(TypeCheckerParser.ExpressionContext,0)


        def createClassStatement(self):
            return self.getTypedRuleContext(TypeCheckerParser.CreateClassStatementContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = TypeCheckerParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.variableSignature()
            self.state = 83
            self.match(TypeCheckerParser.T__4)
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 24, 27, 28, 29, 30]:
                self.state = 84
                self.expression()
                pass
            elif token in [4]:
                self.state = 85
                self.createClassStatement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.match(TypeCheckerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(TypeCheckerParser.VariableNameContext,0)


        def expression(self):
            return self.getTypedRuleContext(TypeCheckerParser.ExpressionContext,0)


        def createClassStatement(self):
            return self.getTypedRuleContext(TypeCheckerParser.CreateClassStatementContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = TypeCheckerParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.variableName()
            self.state = 91
            self.match(TypeCheckerParser.T__4)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 24, 27, 28, 29, 30]:
                self.state = 92
                self.expression()
                pass
            elif token in [4]:
                self.state = 93
                self.createClassStatement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 96
            self.match(TypeCheckerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.TypeContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.TypeContext,i)


        def variableName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.VariableNameContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.VariableNameContext,i)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_parametersInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersInit" ):
                listener.enterParametersInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersInit" ):
                listener.exitParametersInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersInit" ):
                return visitor.visitParametersInit(self)
            else:
                return visitor.visitChildren(self)




    def parametersInit(self):

        localctx = TypeCheckerParser.ParametersInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametersInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(TypeCheckerParser.T__5)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 23, 30]:
                self.state = 99
                self.type_()
                self.state = 100
                self.variableName()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 101
                    self.match(TypeCheckerParser.T__6)
                    self.state = 102
                    self.type_()
                    self.state = 103
                    self.variableName()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [8]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            self.match(TypeCheckerParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodSignatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TypeCheckerParser.TypeContext,0)


        def methodName(self):
            return self.getTypedRuleContext(TypeCheckerParser.MethodNameContext,0)


        def parametersInit(self):
            return self.getTypedRuleContext(TypeCheckerParser.ParametersInitContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_methodSignature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodSignature" ):
                listener.enterMethodSignature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodSignature" ):
                listener.exitMethodSignature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodSignature" ):
                return visitor.visitMethodSignature(self)
            else:
                return visitor.visitChildren(self)




    def methodSignature(self):

        localctx = TypeCheckerParser.MethodSignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodSignature)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(TypeCheckerParser.T__8)
            self.state = 116
            self.type_()
            self.state = 117
            self.methodName()
            self.state = 118
            self.parametersInit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodSignature(self):
            return self.getTypedRuleContext(TypeCheckerParser.MethodSignatureContext,0)


        def methodBlock(self):
            return self.getTypedRuleContext(TypeCheckerParser.MethodBlockContext,0)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = TypeCheckerParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.methodSignature()
            self.state = 121
            self.methodBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnStatement(self):
            return self.getTypedRuleContext(TypeCheckerParser.ReturnStatementContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.StatementContext,i)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_methodBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBlock" ):
                listener.enterMethodBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBlock" ):
                listener.exitMethodBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBlock" ):
                return visitor.visitMethodBlock(self)
            else:
                return visitor.visitChildren(self)




    def methodBlock(self):

        localctx = TypeCheckerParser.MethodBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(TypeCheckerParser.T__9)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1106268162) != 0):
                self.state = 124
                self.statement()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 130
                self.returnStatement()
                pass
            elif token in [11]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 134
            self.match(TypeCheckerParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.ClassNameContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.ClassNameContext,i)


        def variableSignature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.VariableSignatureContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.VariableSignatureContext,i)


        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.VariableDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = TypeCheckerParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(TypeCheckerParser.T__11)
            self.state = 137
            self.className()
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 138
                self.match(TypeCheckerParser.T__12)
                self.state = 139
                self.className()
                pass
            elif token in [10]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 143
            self.match(TypeCheckerParser.T__9)
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 144
                    self.variableSignature()
                    self.state = 145
                    self.match(TypeCheckerParser.T__1) 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1089470464) != 0):
                self.state = 152
                self.variableDeclaration()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 158
                self.methodDeclaration()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(TypeCheckerParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(TypeCheckerParser.ClassNameContext,0)


        def variableSignature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.VariableSignatureContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.VariableSignatureContext,i)


        def methodSignature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeCheckerParser.MethodSignatureContext)
            else:
                return self.getTypedRuleContext(TypeCheckerParser.MethodSignatureContext,i)


        def getRuleIndex(self):
            return TypeCheckerParser.RULE_templateDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateDeclaration" ):
                listener.enterTemplateDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateDeclaration" ):
                listener.exitTemplateDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateDeclaration" ):
                return visitor.visitTemplateDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def templateDeclaration(self):

        localctx = TypeCheckerParser.TemplateDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_templateDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(TypeCheckerParser.T__13)
            self.state = 167
            self.className()
            self.state = 168
            self.match(TypeCheckerParser.T__9)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1089470464) != 0):
                self.state = 169
                self.variableSignature()
                self.state = 170
                self.match(TypeCheckerParser.T__1)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
